# ASPIRE

./: .gitignore  ClearCache.ps1  LICENSE.txt  ReadMe.md  pyproject.toml  show_structure.py  this_build.cmd  this_test.cmd  this_upload.cmd
AspireTUI/: Class_Crashlog.py  ColorAndText.py  ConfigUtils.py  FileUtils.py  Internet.py  Lists.py  MESSAGE.py  StringUtils.py  Strings.py  UtilsConfig.py  UtilsFile.py  UtilsOS.py  _PrintUtils.py  _VersionInfo.py  __init__.py  _internal.py  _theme.py  config.py  hw.py  os.py  path.py  strings.py  tui.py
AspireTUI/Classes/: Crashlog.py  FileUtils.py  Log.py  _Animation.py  _AppManager.py  _Conf.py  _Crashlog.py  _Log.py  _RegEdit.py  __init__.py  _shared.py
AspireTUI/_MESSAGES/: __init__.py  english.py
AspireTUI/__core/: ColorAndText.py  _PrintUtils.py  __init__.py  _internal.py  _theme.py
AspireTUI/__core/_MESSAGES/: __init__.py  english.py
AspireTUI/__theme_dir/: __init__.py
AspireTUI/_theme/: __init__.py  styles.py
aspire/: aspire.py  aspire_core.py  aspire_data_color_and_text.py  aspire_data_status.py  aspire_data_themes.py  aspire_dc_colors.py  aspire_dc_theme.py  aspire_print_utils.py  aspire_string_utils.py  aspire_tuple_color_and_text.py  aspire_utils_env.py  aspire_utils_print.py  aspire_utils_strings.py
aspiretui/: __init__.py  aspire_data_errors.py  aspire_data_status.py  aspire_string_utils.py
docs/: ChangeLog.md  Contribution.md  Description.md  Details.md  Help.md  ReadMe..md  ReadMe.md  Structure.md  TODO-Found.md  TODO-Manual.md  TODO.md  USAGE.md
docs/examples/: Data_Interactions.py  Demo.py  HelloWorldApp.cfg  Hello_World.py  Hello_World_App.py  Menu.py  ReadMe.md  Theme_Preview.py  local_runtime.py  testing.py
docs/extra-old/: Contribution.md  Description.md  ReadMe.md  Structure.md
docs/help/: ReadMe.md  themes.md
docs/help/1.HelloWorld/: ReadMe.md
docs/help/2.data_interactions/: ReadMe.md
docs/help/data_interactions/: RadMe.md
docs/help/themes/: ReadMe.md
docs/tools/: get_todo.py  this_build.cmd  this_upload.cmd
examples/: Data_Interactions.py  Demo.py  Hello_World.py  Hello_World_App.py  ThemePreview.py  __init__.py  local_runtime.py  testing.py
test_env/: testing.py
tools/: TODO-Found.md  get_todo.py  show_structure.py  this_build.cmd  this_upload.cmd
