[project]
# This is the name of your project. The first time you publish this
# package, this name will be registered for you. It will determine how
# users can install this project, e.g.:
#
# $ pip install ASPIRETUI
#
# And where it will live on PyPI: https://pypi.org/project/sampleproject/
#
# There are some restrictions on what makes a valid project name
# specification here:
# https://packaging.python.org/specifications/core-metadata/#name
name = "ASPIRETUI"  # Required

# Versions should comply with PEP 440:
# https://www.python.org/dev/peps/pep-0440/
#
# For a discussion on single-sourcing the version, see
# https://packaging.python.org/guides/single-sourcing-package-version/
version = "0.0.4a"  # Required

# https://packaging.python.org/specifications/core-metadata/#summary
description = "A framework for a line based TUI"  # Optional

# This field corresponds to the "Description" metadata field:
# https://packaging.python.org/specifications/core-metadata/#description-optional
#readme = "ReadMe.md" # Optional

# https://packaging.python.org/guides/distributing-packages-using-setuptools/#python-requires
requires-python = ">=3.3"

# This is either text indicating the license for the distribution, or a file
# that contains the license
# https://packaging.python.org/en/latest/specifications/core-metadata/#license
license = {file = "LICENSE.txt"}
keywords = ["TUI", "console"]  # Optional
authors = [
  {name = "Simon Arjuna Erat", email = "erat.simon@gmail.com" } # Optional
]
maintainers = [
  {name = "Simon Arjuna Erat", email = "erat.simon@gmail.com" } # Optional
]

# Classifiers help users find your project by categorizing it.
#
# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [  # Optional
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Environment :: Console",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: System :: Shells",
  "Topic :: Utilities",
  

  # Pick your license as you wish
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]


[project.urls]  # Optional
"Homepage" = "https://github.com/sri-arjuna/ASPIRE"
"Bug Reports" = "https://github.com/sri-arjuna/ASPIRE/issues"
"Source" = "https://github.com/sri-arjuna/ASPIRE/"
"Help / Manual" = "https://github.com/sri-arjuna/ASPIRE/tree/master/docs/help"
#"Funding" = "https://donate.pypi.org"
#"Say Thanks!" = "http://saythanks.io/to/example"

# This is configuration specific to the `setuptools` build backend.
# If you are using a different build backend, you will need to change this.
[tool.setuptools]
# If there are data files included in your packages that need to be
# installed, specify them here.
#package-data = {"sample" = ["*.dat"]}
